2016-10-23  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.ac, installer.nsl.in, WINDOWS-PORT.txt: Force to build
	against GTK2 on Windows.

2016-10-14  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.ac, src/callbacks.c: Launch HTML help from menu.
	* doc/help/gnusim8085.xml: Added correct links for license text.

2016-10-08  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.[c,h], src/callbacks.c: Used correct widgets depending
	on GTK version. Code clean up.

2016-10-02  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.c, src/gui-app.c, src/gui-list-message.c,
	src/interface.c: Cleaned up the code to reduce the widgets and made it
	more readable.

2016-09-26  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.ac, src/gui-editor.*, src/interface.c: Made it possible to
	build with GTK3 APIs. Use --with-gtk3 option of configure script.

2016-09-22  Onkar Shinde  <onkarshinde@gmail.com>

	* m4/*, po/*, ABOUT-NLS, config.rpath, configure.ac: Updates to gettext
	macros and other related files to version 0.18.1.

2016-02-16  Onkar Shinde  <onkarshinde@gmail.com>

	* po/*.po, PO/LINGUAS: New/Updated translations.
	* configure.ac, src/*: Bumped required GTK+ version, replaced use of
	deprecatd APIs, file handling using gio made default.
	* doc/help/Makefile.am: Install help files only if they are built.
	* WINDOWS-PORT.TXT, installer.nsi.in: Updated instructions, installer.

2016-01-30  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.ac, config.sub, config.guess, src/Makefile.am: Updates to
	make autotools happy.

2011-09-19  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in, doc/Makefile.am, doc/help/*, autoclean.sh: Build system
	changes for providing HTML help pages converted from docbook files.

2011-09-11  Onkar Shinde  <onkarshinde@gmail.com>

	* src/gui-editor.h: Use only top level headers for gtksourceview.
	* src/gui-editor.c, src/gui-list-message.c: In GtkTextBuffer line