@@ -2,6 +2,9 @@
 
 	* configure.ac, installer.nsl.in, WINDOWS-PORT.txt: Force to build
 	against GTK2 on Windows.
+	* configure.ac, src/callsbacks.c, src/gui-editor.c, src/main.c: Used
+	GLIB macro instead of autoconf variable for detecting Windows. Made the
+	launch of help compatible with Windows.
 
 2016-10-14  Onkar Shinde  <onkarshinde@gmail.com>
 
